# opencode-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPENDENCY_UPDATES.md  FINAL_INTEGRATION_REPORT.md  Makefile  README.md  SLICE_2_CLI_REPORT.md  SLICE_3_IMPLEMENTATION_PLAN.md  TEST_INFRASTRUCTURE_SUMMARY.md  build_rs_cov.profraw
.claude/: CLAUDE.md  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml
coverage/: tarpaulin-report.html
coverage_baseline/: tarpaulin-report.json
coverage_report/: tarpaulin-report.html
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  repl.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: additional_tests.rs  comprehensive_tests.rs  container.rs  error.rs  git.rs  lib.rs  property_tests.rs  service.rs  supervisor.rs  swarm.rs
crates/core/src/config/: mod.rs  tests.rs
crates/core/src/personas/: mod.rs  tests.rs
crates/core/src/provider/: mod.rs  openai.rs  tests.rs
crates/core/src/slash/: mod.rs  tests.rs
crates/opencode-gui/: index.html  package.json  vitest.config.ts
crates/opencode-gui/coverage/: coverage-final.json  index.html
crates/opencode-gui/coverage/src/: App.tsx.html  index.html  main.tsx.html  types.ts.html
crates/opencode-gui/coverage/src/components/: SwarmMonitor.tsx.html  index.html
crates/opencode-gui/coverage/src/components/ui/: button.tsx.html  card.tsx.html  index.html  input.tsx.html  label.tsx.html  progress.tsx.html  resizable.tsx.html
crates/opencode-gui/coverage/src/lib/: index.html  utils.ts.html
crates/opencode-gui/src/: App.tsx  types.ts
crates/opencode-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/opencode-gui/src-tauri/src/: main.rs
crates/opencode-gui/src/components/: SwarmMonitor.tsx
crates/opencode-gui/src/components/ui/: resizable.tsx
crates/opencode-gui/src/tests/: App.test.tsx  SwarmMonitor.test.tsx  setup.ts  ui-components.test.tsx
docs/: slice-0.md  slice-1.5-tdd-approach.md  slice-1.md  slice-2.md  slice-3.md  slice-4.md  slice-5.md  slice-6.md  slice-7.md  slice-8.md  slice-9.md
opencode-core/src/config/: tests.rs
opencode-core/src/di/: tests.rs
opencode-core/src/error/: tests.rs
opencode-core/src/provider/: tests.rs
scripts/: benchmark.sh  coverage.sh  install.sh  test-full-suite.sh
scripts/homebrew/: opencode.rb
scripts/scoop/: opencode.json
tests/integration/: container_isolation.rs  end_to_end.rs  gui_backend_ipc.rs  mod.rs  multi_agent_coordination.rs
