[workspace]
resolver = "2"
members = [
    "crates/core",
    # "crates/cli", # We'll uncomment this in a later slice
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.19"
dotenvy = "0.15"
toml = "0.8"
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tempfile = "3.0"
# Add other shared dependencies here later