[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.45", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-openai = "0.28"
dotenvy = "0.15"
thiserror = "1.0"
async-trait = "0.1"
toml = "0.8"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
reedline = "0.40"

# Persona/slash command dependencies  
serde_yml = "0.0.12"  # Replacement for deprecated serde_yaml
lexopt = "0.3"
directories = "6.0"

# Git checkpoint dependencies
git2 = "0.20"
uuid = { version = "1.17", features = ["v4", "fast-rng"] }

# Testing dependencies
mockall = "0.13"
proptest = "1.7"
wiremock = "0.6"
pretty_assertions = "1.4"
test-case = "3.3"
cargo-tarpaulin = "0.32"
tracing-test = "0.2"
tempfile = "3.20"
fake = { version = "4.3", features = ["derive"] }
arbitrary = { version = "1.4", features = ["derive"] }
criterion = { version = "0.6", features = ["html_reports"] }
rstest = "0.25"
insta = { version = "1.43", features = ["yaml"] }

# Shared utility dependencies
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"