[package]
name = "opencode_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Get dependencies from the workspace root
tokio = { workspace = true }
anyhow = { workspace = true }
async-openai = { workspace = true }
dotenvy = { workspace = true }

# Crate-specific dependencies
once_cell = "1.19" # For creating a global singleton client
tracing = "0.1"
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.0"
tokio-test = "0.4"
