[package]
name = "opencode_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Get dependencies from the workspace root
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
